Allow dynamic group sizes